# leitor-simulados

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
models/1st_stage_v0_0_0/: pipeline.config
models/2nd_stage_v0_0_0/: pipeline.config
models/2nd_stage_v0_0_0/annotations/: label_map.pbtxt
models/2nd_stage_v0_0_1/: pipeline.config
models/2nd_stage_v0_0_1/annotations/: label_map.pbtxt
models/PS_first_stage/: pipeline.config
models/PS_first_stage/annotations/: label_map.pbtxt
models/macro_block_detection_v0_0_0/annotations/: label_map.pbtxt
src/: build_report.py  checks.py  exam_scanner.py  filesystem.py  image.py  log.py  object_detection.py  run_detection_model.py
src/aux/: data_classes.py  filehandler.py  filesystem.py  image.py  log.py  object_detection.py
src/builder/: __init__.py  dataclasses.py  ps_alunos_builder.py
src/checks/: __init__.py  ps_alunos_checks.py
